# bison

./: Cargo.toml  analyze_execution_times.ps1  analyze_times.bat
src/: convert.rs  core_ops.rs  core_ops2.rs  infer_direct.rs  lstm_optimized.rs  main.rs  optimized_ops.rs  simd_kernels.rs
src/tests/: bert_ops_test.rs  kokoro_ops_test.rs  micro_bench.rs  mod.rs  onnx_model_test.rs  parser_test.rs  sequence_map_test.rs  tensor_ops_test.rs
