[package]
name = "onnxtest"
version = "0.1.0"
edition = "2021"


[dependencies]
anyhow = "1.0"
indexmap = { version = "2.0", features = ["serde"] }
prost = "0.12"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
ndarray = "0.16.1"
ndarray-npy="0.9.1"
num-traits = "0.2"


[build-dependencies]
prost-build = "0.12"
